--- a/Develop/style.css
+++ b/Develop/style.css
@@ -31,10 +31,11 @@ textarea{
 }
 
 .row {
-  white-space: pre-wrap;
-  height: 80px;
+  /* white-space: pre-wrap; */
+  /* height: 80px; */
   border-top: 1px solid white;;
 }
+
 
 .hour {
   background-color: #ffffff;
@@ -68,4 +69,33 @@ textarea{
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+/* added */
+
+div p {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
+.d-flex-custom {
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+}
+
+.row-custom {
+  display: flex;
+  justify-content: center;
+  border-top: 0;
 }
