--- a/Develop/style.css
+++ b/Develop/style.css
@@ -11,6 +11,9 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  /* added */
+  width: 100%;
+  height: 100%; 
 }
 
 .jumbotron {
@@ -19,6 +22,7 @@ textarea{
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
+  margin-bottom: 0;
 }
 
 .description{
@@ -31,16 +35,17 @@ textarea{
 }
 
 .row {
-  /* white-space: pre-wrap; */
-  /* height: 80px; */
+  /* white-space: pre-wrap;
+  height: 80px; */
   border-top: 1px solid white;;
 }
-
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  width: 100%;
+  height: 100%; 
 }
 
 .past {
@@ -72,7 +77,6 @@ textarea{
 }
 
 /* added */
-
 div p {
   margin-top: 0;
   margin-bottom: 0;
@@ -88,7 +92,8 @@ div p {
   'opsz' 48
 }
 
-.d-flex-custom {
+.col-2 {
+  display: flex;
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
@@ -98,4 +103,15 @@ div p {
   display: flex;
   justify-content: center;
   border-top: 0;
+}
+
+.saveMessage {
+  width: 100;
+  display: none;
+  justify-content: center;
+  margin-top: 3px;
+}
+
+.red {
+  color: red;
 }
