--- a/Assets/style.css
+++ b/Assets/style.css
@@ -16,6 +16,7 @@ textarea{
   height: 100%; 
 }
 
+/* styling for header */
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -35,50 +36,32 @@ textarea{
   border-radius: 15px;
 }
 
+/* styling for save message */
+.saveMessage {
+  width: 100;
+  display: none;
+  justify-content: center;
+  margin-top: 3px;
+}
+
+.red {
+  color: red;
+}
+
+
+/* styling for each section of time */
 .row {
   /* white-space: pre-wrap;
   height: 80px; */
   border-top: 1px solid white;;
 }
 
-.hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
-  width: 100%;
-  height: 100%; 
+.row-custom {
+  display: flex;
+  justify-content: center;
+  border-top: 0;
 }
 
-.past {
-  background-color: #d3d3d3;
-  color: white;
-}
-
-.present {
-  background-color: #ff6961;
-  color: white;
-}
-
-.future {
-  background-color: #77dd77;
-  color: white;
-}
-
-.saveBtn {
-  border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06AED5;
-  color: white;
-  border-bottom: 1px solid white;
-}
-
-.saveBtn i:hover {
-  font-size: 20px;
-  transition: all .3s ease-in-out;
-}
-
-/* added */
 div p {
   margin-top: 0;
   margin-bottom: 0;
@@ -97,21 +80,43 @@ div p {
   flex-wrap: wrap;
 }
 
-.row-custom {
-  display: flex;
-  justify-content: center;
-  border-top: 0;
+.hour {
+  background-color: #ffffff;
+  color: #000000;
+  border-top: 1px dashed #000000;
+  width: 100%;
+  height: 100%; 
 }
 
-.saveMessage {
-  width: 100;
-  display: none;
-  justify-content: center;
-  margin-top: 3px;
+/* different styling for text areas */
+.past {
+  background-color: #d3d3d3;
+  color: white;
 }
 
-.red {
-  color: red;
+.present {
+  background-color: #ff6961;
+  color: white;
 }
 
-/* organize styling to flow better */
+.future {
+  background-color: #77dd77;
+  color: white;
+}
+
+/* styling for save button */
+.saveBtn {
+  border-left: 1px solid black;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #06AED5;
+  color: white;
+  border-bottom: 1px solid white;
+}
+
+.saveBtn i:hover {
+  font-size: 20px;
+  transition: all .3s ease-in-out;
+}
+
+
